force-app/main/default/objects/CTCT2__Mapping__c/CTCT2__Mapping__c.object-meta.xml
<CustomObject>
    <label>Constant Contact Mapping</label>
    <nameField>
        <displayFormat>MAP-{00}</displayFormat>
        <label>Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Constant Contact Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>