force-app/main/default/objects/CTCT2__Mapping__c/fields/CTCT2__CTCT_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__CTCT_Field_Name__c</fullName>
    <label>Constant Contact Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>