force-app/main/default/objects/CTCT2__Mapping__c/fields/CTCT2__SF_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__SF_Field_Name__c</fullName>
    <label>Salesforce Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>