force-app/main/default/objects/CTCT2__Mapping__c/fields/CTCT2__SF_Object__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__SF_Object__c</fullName>
    <label>Salesforce Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>