force-app/main/default/objects/CTCT2__Mapping__c/validationRules/CTCT2__Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>CTCT2__Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( CTCT2__CTCT_Field_Name__c ) ||  ISPICKVAL(CTCT2__Type__c, &quot;&quot;)</errorConditionFormula>
    <errorMessage>Type and Constant Contact Field Name must be populated.</errorMessage>
</ValidationRule>