force-app/main/default/objects/CTCT2__Mapping__c/listViews/CTCT2__All.listView-meta.xml
<ListView>
    <fullName>CTCT2__All</fullName>
    <columns>NAME</columns>
    <columns>CTCT2__CTCT_Field_Name__c</columns>
    <columns>CTCT2__SF_Object__c</columns>
    <columns>CTCT2__SF_Field_Name__c</columns>
    <columns>CTCT2__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>